# langchain

./: .gitignore  ENVIRONMENT_FILE  main.py  pyproject.toml  readme.txt.txt  requirements.txt
src/: 01_basic_search.py  03_dynamic_model_Selection.ipynb  04_advanced_model_Selection.ipynb  07_structured_output.ipynb  101_basic_langchain_agent.py  101_basic_langchain_code.py  102_langchain_using_tools.py  103.1_langchain_vector_embedding.py  103.2_langchain_vector_search.py  103.3_langchain_rag_application.py  104.1_langchain_sqlserver_agent.py  104.2_langchain_sqlserver_agent.py  104_langchain_sqllite_agent.py  custom_tools.py
src/reference_code/: 01_basic_web_search.ipynb  02_agent_model_instance.ipynb  06_passingSystem_prompt.ipynb  08_custom_state_management.ipynb  test.ipynb
